--- a/rwanda-water-quality-prediction_Ahamed.ipynb
+++ b/rwanda-water-quality-prediction_Ahamed.ipynb
@@ -18,9 +18,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "```\n",
-        "<p style=\"text-align: center;\">Developing an Automated Water Quality Prediction System using Machine Learning</p>\n",
-        "```\n",
+        "\n",
+        "# Developing an Automated Water Quality Prediction System using Machine Learning\n",
+        "\n",
         "**Goal of this project** :The project goals for the Omdena Rwanda Chapter's water quality prediction project are:\n",
         "\n",
         "1. Enhance accessibility to clean water: The project aims to contribute to the broader objective of improving access to clean water. By predicting water quality, the model will assist in ensuring the availability of safe and clean water for drinking, agriculture, and other essential uses.\n",
